# device_simulator-v2

./: .gitignore  CMakeLists.txt  app.c  app.h  main.c  makefile  readme.md  transport.h  transport_tcp_client.c  transport_test.c
examples/chunk-stream/: readme.md  transport_chunk_stream.c  transport_chunk_stream.h
protocol/: io_buffer.c  io_buffer.h  protocol.c  protocol.h  readme.md
